--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </section>
     </main>
     
-    <script src="src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
