--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encoding and Decoding Algorithms</title>
-    <link rel="stylesheet" href="src/styles.css"> <!-- Link to the CSS stylesheet -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS stylesheet -->
 </head>
 <body>
     <header>
